<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/new_item"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_round_note_alt_24" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/create_checklist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    app:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_round_checklist_24" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/checklist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/create_folder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    app:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_round_folder_24" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/folder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>